crates/swc_ecma_parser/tests/test262-error-references/fail/721efc4cbc95a6a0.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/721efc4cbc95a6a0.js:1:31
  |
1 | function *g() { try {} catch (yield) {} }
  |                               ^^^^^

